--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc -b",
     "prepack": "rm -rf dist && npm build",
     "test": "jest",
-    "codegen": "./node_modules/.bin/subql codegen"
+    "codegen": "npx subql codegen"
   },
   "homepage": "https://github.com/subquery/subql-starter",
   "repository": "github:subquery/subql-starter",
@@ -20,8 +20,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@polkadot/api": "^6",
+    "@subql/cli": "latest",
     "@subql/types": "latest",
-    "typescript": "4.4.4",
-    "@subql/cli": "latest"
+    "typescript": "4.4.4"
   }
 }
