--- a/project.yaml
+++ b/project.yaml
@@ -337,7 +337,7 @@ network:
 dataSources:
   - name: main
     kind: substrate/Runtime
-    startBlock: 1393999
+    startBlock: 1405750
     mapping:
       handlers:
         - handler: handleBlock
@@ -345,7 +345,7 @@ dataSources:
         - handler: handleEvent
           kind: substrate/EventHandler
           filter:
-            module: balances
-            method: Deposit
+            module: ethereumRelayAuthorities
+            method: MMRRootSigned
         - handler: handleCall
           kind: substrate/CallHandler
