Store mmr root signed events

--- a/project.yaml
+++ b/project.yaml
@@ -345,7 +345,7 @@ dataSources:
         - handler: handleEvent
           kind: substrate/EventHandler
           filter:
-            module: ethereumRelayAuthorities
-            method: MMRRootSigned
+            - module: ethereumRelayAuthorities
+              method: MMRRootSigned
         - handler: handleCall
           kind: substrate/CallHandler
