--- a/project.yaml
+++ b/project.yaml
@@ -5,7 +5,7 @@ schema: ./schema.graphql
 dataSources:
   - name: main
     kind: substrate/Runtime
-    startBlock: 1405750
+    startBlock: 0
     mapping:
       handlers:
         - handler: handleBlock
